[gd_scene load_steps=9 format=4 uid="uid://dvp1hvrxlyucc"]

[ext_resource type="Script" path="res://Scripts/Screens/death.gd" id="1_poeh0"]
[ext_resource type="Theme" uid="uid://dchsfnmpldp4" path="res://Resources/Themes/Menu_Button_Bold.tres" id="2_2t1ms"]
[ext_resource type="PackedScene" uid="uid://crrgrlu3476er" path="res://Scenes/Interaction/Bat.tscn" id="2_12l6u"]
[ext_resource type="TileSet" uid="uid://dq2wv65dkypvo" path="res://Resources/Tiles/Obstacles.tres" id="3_rfndx"]
[ext_resource type="PackedScene" uid="uid://bgw6bnk7htssx" path="res://Scenes/Interaction/Cursor.tscn" id="4_icv2n"]
[ext_resource type="Theme" uid="uid://2cwwdidf6lxu" path="res://Resources/Themes/Menu_Button.tres" id="6_0yt4x"]
[ext_resource type="TileSet" uid="uid://6vvuli8mgkii" path="res://Resources/Tiles/Ground.tres" id="6_27e4c"]
[ext_resource type="PackedScene" uid="uid://b28skby5iojjb" path="res://Scenes/Interaction/Spike.tscn" id="8_etdj6"]

[node name="Death" type="Node2D"]
script = ExtResource("1_poeh0")

[node name="Text" type="Label" parent="."]
offset_top = 151.0
offset_right = 385.0
offset_bottom = 174.0
scale = Vector2(5, 5)
theme = ExtResource("2_2t1ms")
text = "You Died!"
horizontal_alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_left = 1.0
offset_top = 653.0
offset_right = 961.0
offset_bottom = 693.0
scale = Vector2(2, 2)

[node name="Menu" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_0yt4x")
action_mode = 0
text = "Main Menu
"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
offset_left = 1.0
offset_top = 542.0
offset_right = 961.0
offset_bottom = 582.0
scale = Vector2(2, 2)

[node name="Respawn" type="Button" parent="AspectRatioContainer2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("6_0yt4x")
action_mode = 0
text = "Try Again"

[node name="Bat" parent="." instance=ExtResource("2_12l6u")]
z_index = -1
position = Vector2(945, 389)
scale = Vector2(6, 6)

[node name="Cursor" parent="." instance=ExtResource("4_icv2n")]

[node name="Score" type="Label" parent="."]
offset_top = 369.0
offset_right = 640.0
offset_bottom = 392.0
scale = Vector2(3, 3)
theme = ExtResource("6_0yt4x")
text = "Score: 0"
horizontal_alignment = 1

[node name="Score2" type="Label" parent="."]
offset_top = 300.0
offset_right = 640.0
offset_bottom = 323.0
scale = Vector2(3, 3)
theme = ExtResource("6_0yt4x")
text = "High Score: 0"
horizontal_alignment = 1

[node name="Ground" type="TileMapLayer" parent="."]
z_index = -2
position = Vector2(-192, 16)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAADAAcAAAAAAAAAAAACAAcAAAAAAAAAAAACAAYAAAAAAAAAAAACAAUAAAAAAAAAAAACAAQAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAANAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAADAAIAAAAIAAYAAAADAAEAAGAJAAYAAAADAAEAAGAKAAYAAAADAAIAAGALAAYAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAQAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAAKAAUAAAADAAEAADAJAAUAAAADAAAAAAAIAAUAAAADAAAAAAAFAAQAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAADAAIAAFAHAAQAAAADAAEAAAAHAAUAAAADAAEAAAAIAAQAAAADAAAAAAAIAAMAAAADAAEAAFAIAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAADAAEAAFAJAAQAAAADAAAAAAAKAAQAAAADAAEAADAKAAMAAAADAAIAADAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAA=")
tile_set = ExtResource("6_27e4c")
collision_visibility_mode = 1

[node name="Obstacles" type="TileMapLayer" parent="."]
z_index = -2
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAP//AAAAAAAAAAAOAP//AAAAAAAAAAANAP//AAAAAAAAAAAMAP//AAAAAAAAAAALAP//AAAAAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAOAAcAAAABAAAAABAOAAYAAAABAAAAABAOAAUAAAABAAAAABAOAAQAAAABAAAAABAOAAMAAAABAAAAABAOAAIAAAABAAAAABAOAAEAAAABAAAAABAOAAAAAAACAAAAABAAAAAAAAACAAAAAAABAAAAAAAAAAEAAAACAAAAAAAAAAEAAAADAAAAAAAAAAEAAAAEAAAAAAAAAAEAAAAFAAAAAAAAAAEAAAAGAAAAAAAAAAEAAAAHAAAAAAAAAAEAAAAIAAAAAAAAAAEAAAAJAAAAAAAAAAEAAAAKAAAAAAAAAAEAAAALAAAAAAAAAAEAAAAMAAAAAAAAAAEAAAANAAAAAAAAAAEAAAA=")
tile_set = ExtResource("3_rfndx")
navigation_enabled = false

[node name="Spike" parent="." instance=ExtResource("8_etdj6")]
position = Vector2(128, 960)
rotation = -1.5708
scale = Vector2(4, 4)

[node name="Spike2" parent="." instance=ExtResource("8_etdj6")]
position = Vector2(1792, 960)
rotation = -1.5708
scale = Vector2(4, 4)

[node name="Spike3" parent="." instance=ExtResource("8_etdj6")]
position = Vector2(128, 128)
rotation = 1.5708
scale = Vector2(4, 4)

[node name="Spike4" parent="." instance=ExtResource("8_etdj6")]
position = Vector2(1792, 128)
rotation = 1.5708
scale = Vector2(4, 4)

[connection signal="pressed" from="AspectRatioContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="AspectRatioContainer2/Respawn" to="." method="_on_respawn_pressed"]
